tests/baselines/reference/accessorWithES5(strict=true).errors.txt
accessorWithES5.ts(8,9): error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
accessorWithES5.ts(8,11): error TS7006: Parameter 'v' implicitly has an 'any' type.
accessorWithES5.ts(17,9): error TS7032: Property 'b' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
accessorWithES5.ts(17,11): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== accessorWithES5.ts (4 errors) ====
    class C {
        get x() {
            return 1;
        }
    }
    
    class D {
        set x(v) {
            ~
!!! error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
              ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        }
    }
    
    var x = {
        get a() { return 1 }
    }
    
    var y = {
        set b(v) { }
            ~
!!! error TS7032: Property 'b' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
              ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }